--- a/style.css
+++ b/style.css
@@ -212,10 +212,19 @@ footer{
 	width: 100%;
 	height : 25vw;
 	background-color: black;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
 
 .leader{
 	display: inline-flex;
 	width: 100%;
 	justify-content: space-around;
+}
+
+.foot{
+	height: 80%;
+	width: 30vw;
+	background-color: white;
 }
